--- a/src/styles/finish-page.css
+++ b/src/styles/finish-page.css
@@ -1,7 +1,7 @@
 .finish-page {
   background-size: 100% 100%;
   /*border: 1px solid red;*/
-  height: 535px;
+  height: 100%;
   margin: -8px;
   margin-bottom: 0px;
   width: 100%;
@@ -10,7 +10,7 @@
 }
 .finish-page .opac-bg {
   background-color: black;
-  height: 535px;
+  height: 100%;
   opacity: 0.8;
   position: absolute;
   width: 100%;
@@ -18,12 +18,17 @@
 }
 
 .finish-page h1 {
-  /*border: 1px solid red;*/
+  border: 1px solid red;
+  border-radius: 100%;
   color: white;
   font-size: 42px;
-  margin-top: 150px;
-  width: 100%;
+  height: 200px;
+  line-height: 200px;
+  margin-left: calc(50% - 100px);
+  margin-top: 30%;
   position: absolute;
+  text-align: center;
+  width: 200px;
   z-index: 120;
 }
 
